--- a/spring_annotation/src/main/resources/dbconfig.properties
+++ b/spring_annotation/src/main/resources/dbconfig.properties
@@ -1,4 +1,4 @@
 db.name= root
 db.password = 1771291wei@
-db.url= com.mysql.jdbc.Driver
+db.url= jdbc:mysql://106.12.27.130:3306/caffeine
 db.driver-class-name= com.mysql.jdbc.Driver
